[package]
name = "funrotate"
version = "0.1.0"
authors = ["Noémi Ványi <sitbackandwait@gmail.com>"]
description = "Logrotate with surprises"
repository = "https://github.com/kvch/funrotate"
edition = "2021"
license = "AGPL-3.0-or-later"
license-file = "LICENSE"
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
]

[dependencies]
glob = "0.3.0"
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.17"
simplelog = "0.12.0"
csv = "1.1.6"
chrono = "0.4.19"
phf = { version = "0.10", features = ["macros"] }
